jellyfin/jellyfin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
          - containerPort: 8989
        volumeMounts:
          - mountPath: /cache
            name: cache
          - mountPath: /config
            name: config
          - mountPath: /movies
            name: moves
          - mountPath: /tv
            name: tv
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: config
      -  name: cache
         persistentVolumeClaim:
           claimName: cache
      - name: movies
        hostPath:
          path: /mnt/share/Movies
      - name: tv
        hostPath:
          path: /mnt/share/Television
